First push, all functions

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=final
+# Configuración del datasource para PostgreSQL
+spring.datasource.url=jdbc:postgresql://db.ezxloadrfwtmjkutbqeu.supabase.co:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=Admin123456*-0jdb
+
+# Configuración de Hibernate (JPA)
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
