--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,11 @@
-spring.application.name=final
-# Configuración del datasource para PostgreSQL
-spring.datasource.url=jdbc:postgresql://db.ezxloadrfwtmjkutbqeu.supabase.co:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password=Admin123456*-0jdb
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+# Base de datos
+spring.datasource.url=jdbc:postgresql://aws-0-us-west-1.pooler.supabase.com:5432/postgres
+spring.datasource.username=postgres.awzejezylvnmttrootfr
+spring.datasource.password=P8kM5vL9nR4eT2xA
+
+# Configuración de JPA
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+# Configuración básica del pool
+spring.datasource.hikari.maximum-pool-size=2
